# peerwatch

./: Cargo.toml  flake.nix
src/: app.rs  audio.rs  lib.rs  main.rs  message.rs  mpv.rs  peer_event.rs  player.rs  shader.wgsl  video.rs  window.rs
src/mpv/: events.rs
