[package]
name = "peer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
eros = "0.5.0"
indexmap = "2.12.1"
interprocess = { version = "2.2.3", features = ["tokio"] }
iroh = "0.95.1"
iroh-gossip = "0.95.0"
iroh-tickets = "0.2.0"
n0-future = "0.3.1"
notify = "8.2.0"
postcard = "1.1.3"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tokio = { version = "1.48.0", features = ["full"] }
